Fix GSAP item background-size from 75vh to cover to avoid squishing wide desktop screenshots during expansion animation

--- a/src/styles/designs/designs.module.scss
+++ b/src/styles/designs/designs.module.scss
@@ -38,8 +38,8 @@
         .item {
             width: 20vw;
             height: 45vh;
+            background-size: cover;
             background-position: center;
-            background-size: 75vh;
             background-repeat: no-repeat;
             margin: 0.5vw;
             border-radius: 3vw;
